@@ -5,26 +5,38 @@
       lang="en"
       metal:use-macro="context/main_template/macros/master"
       i18n:domain="sc.social.bookmarks">
-<body>
-<metal:content-core fill-slot="content-core">
-<metal:block define-macro="content-core">
-    <metal:macro define-macro="bookmarks"> 
-    <div class="sc_social_bookmarks">
-        <ul tal:define="portal_url context/@@plone_portal_state/portal_url">
-            <li tal:repeat="provider view/providers">
-                <a href="" tal:attributes="href provider/url">
-                    <img src="" 
-                        tal:attributes="src string:${portal_url}/++resource++sb_images/${provider/logo};
-                        alt string:${provider/id};
-                        title string:${provider/id};" />
-                    <span class="bookmark_id" tal:content="provider/id">BOOKM</span>
-                </a>
-            </li>
-        </ul>
-    </div>
-    </metal:macro>
 
-</metal:block>
+<body>
+
+<metal:content-core fill-slot="content-core">
+  <metal:block define-macro="content-core">
+    <metal:macro define-macro="bookmarks">
+       
+      <div class="sc_social_bookmarks"
+           tal:define="icons_only view/icons_only">
+          
+        <ul tal:define="portal_url context/@@plone_portal_state/portal_url"
+            tal:attributes="class python:icons_only and 'icons_only' or None">
+          
+          <li tal:repeat="provider view/providers">
+            
+            <a href="" tal:attributes="href provider/url">
+              <img src="" 
+                   tal:attributes="src string:${portal_url}/++resource++sb_images/${provider/logo};
+                   alt string:${provider/id};
+                   title string:${provider/id};" />
+              <span class="bookmark_id"
+                    tal:condition="not:icons_only"
+                    tal:content="provider/id">BOOKM</span>
+            </a>
+            
+          </li>
+        </ul>
+      </div>
+      
+    </metal:macro>
+  </metal:block>
 </metal:content-core>
+
 </body>
 </html>
