@@ -1,8 +1,13 @@
 <div class="sc_social_bookmarks_viewlet" tal:condition="view/enabled">
+  
   <div class=""
     tal:define="overlay_class python:view.action_enabled and ' sc_social_bookmarks_overlay' or ''"
     tal:attributes="class string:sc_social_bookmarks_wrapper${overlay_class}" >
-    <h4 i18n:translate="social_bookmarks_title">Bookmark & Share</h4>
+    
+    <h4 i18n:translate="social_bookmarks_title"
+        tal:condition="not:view/icons_only">Bookmark & Share</h4>
+    
     <metal:macro use-macro="context/social_bookmarks_view/macros/bookmarks" />
+  
   </div>  
 </div>
